--- a/README
+++ b/README
@@ -3,3 +3,37 @@
 A totally new and immersive experience,  in which only motivation, willpower and
 hard work  will keep  you afloat.  This 4-week basic  training is  an incredibly
 rewarding, once in-a-lifetime experience.
+
+We start with the basics, and using  a computer, you will write your first lines
+of  code  before  moving  on  to more  complex  coding  exercises.  No  previous
+programming experience required! We simply ask that  you know how to use a mouse
+and a keyboard.
+
+Throughout  this experience,  you will  try  and you  will fail,  over and  over
+again. That’s  the point: learning  the trial-and-error process  builds stamina,
+determination, and process skills that are necessary to be a software engineer.
+
+Basic Training is done  using the 42 style of learning:  no teachers, no classes
+or courses,  no books. You work  by yourself and  in groups, ask your  peers for
+help, help your peers, and complete projects. Not convinced? Try it!
+
+    https://admissions.42.us.org/en
+
+BASIC TRAINING DATES
+--------------------
+
+Oct 22 – Nov 16, 2018
+Jan 07 – Feb 01, 2019
+Mar 25 – Apr 19, 2019
+Jul 08 – Aug 03, 2019
+Aug 05 – Aug 30, 2019
+Oct 21 – Nov 15, 2019
+
+Links:
+-----
+    https://www.facebook.com/42SiliconValley/
+    https://twitter.com/42siliconvalley
+    https://www.42.us.org/
+    https://www.42.us.org/program/
+    https://www.42.us.org/program/piscine/
+    https://www.42.us.org/program/the-42-program/
